[Refactor] roleField 관련 수정